# Pantalla

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  Pantalla.iss  Pantalla.sln  Pantalla.vcxproj  Pantalla.vcxproj.filters  README.md  VirtualNDITray.sln  VirtualNDITray.vcxproj  VirtualNDITray.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
VirtualNDITray_autogen/: mocs_compilation_Debug.cpp
VirtualNDITray_autogen/include_Debug/UVLADIE3JM/: moc_TrayApp.cpp.d
VirtualNDITray_autogen/include_Release/UVLADIE3JM/: moc_TrayApp.cpp  moc_TrayApp.cpp.d
cmake/: FetchQt.cmake
src/: DXGICapture.cpp  DXGICapture.h  DisplayManager.cpp  DisplayManager.h  FrameReader.cpp  FrameReader.h  List.cpp  List.h  NDISender.cpp  NDISender.h  Settings.cpp  Settings.h  TrayApp.cpp  TrayApp.h  global.h  main.cpp  ndi-loader.cpp  ndi-loader.h  parsec-vdd.h
